<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/activity_horizontal_margin">

  <TextView
    style="@style/Ugly.Form.Header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/ugly_form_intro" />

  <LinearLayout
    android:id="@+id/form_login_actions"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/form_horizontal_padding"
    android:weightSum="2">

    <Button
      android:id="@+id/welcome_register"
      style="?android:textAppearanceSmall"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:text="@string/action_register" />

    <Button
      android:id="@+id/welcome_login"
      style="?android:textAppearanceSmall"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:text="@string/action_sign_in" />

  </LinearLayout>

</LinearLayout>